Update vector benchmarks after Shape removal